--- a/about-us.html
+++ b/about-us.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: About Us
-description: Learn what makes Peña Ramas Law better than our competition.
+description: Learn what makes Ramas Law better than our competition.
 navigation_weight: 2
 navname: About Us
 ---
@@ -29,8 +29,8 @@ navname: About Us
             <div class="col-lg-6 col-md-12">
                 <div class="title text-left pb-0">
                     <h2>We Fight For Our Clients</h2>
-                    <p>Peña Ramas Law is here to help navigate our clients through the complicated insurance claim and legal claim process.  Our team is dedicated to providing competent and responsive legal assistance to each and every client we represent, while keeping an open line of communication throughout the duration of the claim. Finally, our office only recovers a fee if we win your case.</p>
-                    <p>Please fill out a free case evaluation form to see what Pena Ramas Law can do for you.</p>
+                    <p>Ramas Law is here to help navigate our clients through the complicated insurance claim and legal claim process.  Our team is dedicated to providing competent and responsive legal assistance to each and every client we represent, while keeping an open line of communication throughout the duration of the claim. Finally, our office only recovers a fee if we win your case.</p>
+                    <p>Please fill out a free case evaluation form to see what Ramas Law can do for you.</p>
                     <a href="{{ site.baseurl }}/free-case-evaluation.html" class="btn btn-primary">FREE Case Evaluation</a>
                 </div>
             </div>
@@ -60,17 +60,17 @@ navname: About Us
 		<div class="container">
 			<div class="row">
 				<div class="col-md-10 col-lg-6 mx-md-auto align-self-center">
-					<img class="img-fluid" src="assets/images/bg/kevin-jennifer.jpg" alt="Kevin Ramas and Jennifer Peña">
+					<img class="img-fluid" src="assets/images/bg/kevin-jennifer.jpg" alt="Kevin Ramas">
 				</div>
 				<div class="col-sm-12 col-lg-6 align-self-center">
 					<div class="title text-left p-0">
-							<span class="pre-title">Co-founders & Managing Partners</span>
-							<h2 class="text-dark">Jennifer Peña and Kevin Ramas</h2>
-							<p>Jennifer and Kevin have a combined 15 years experience in fighting to compensate injury victims, recovering millions of dollars for their clients in South Florida. Jennifer and Kevin are well-acquainted with local laws and regulations, have experience at top personal injury firms and practice law with a sense of dedication and compassion for those who have been injured and their families.</p>
+							<span class="pre-title">Founder & Managing Partner</span>
+							<h2 class="text-dark">Kevin Ramas, Esq.</h2>
+							<p>Kevin is a Founding/Managing Partner at Ramas Law. Kevin has over a decade  experience in fighting to compensate injury victims, recovering millions of dollars for his clients in South Florida. Kevin is well-acquainted with local laws and regulations, licensed to practice law in multiple states and practices it with a sense of dedication and compassion for those who have been injured.</p>
 
-							<p>They have broad experience settling cases both in litigation as well as pre-suit, and will choose the best course for each client based on their circumstance. Jennifer and Kevin are passionate advocates and fight for the best possible outcome for every client, giving each case the close personal attention it deserves.</p>
+							<p>Kevin has broad experience settling cases both in litigation as well as pre-suit, and will choose the best course for each client based on their circumstance. He is a passionate advocate and fights for the best possible outcome for every client, giving each case the close personal attention it deserves.</p>
 
-							<p>Let us help you with the insurance claim process and get you a fair compensation.</p>
+							<p>Let us help you with the insurance claim process and get you the compensation deserved.</p>
 						</div>
 				</div>
 			</div>
@@ -87,13 +87,13 @@ navname: About Us
 		<div class="row">
 			<div class="col-md-6 mb-4">
 					<blockquote class="blockquote bg-light" cite="#">
-						<h6 class="mb-2 text-light-gray">Jennifer Peña is a diligent, hard working attorney. She went above & beyond what I thought an attorney does. She checked in on me often. I was impacted in a rear-end collision & the other driver was not insured, my car was totaled and I was hurting. I was worried about everything. Her knowledge, sincere concern & expertise earned my trust & confidence in her & helped me to worry less. She knew what needed to be done and she aggressively made sure it happened. She was approachable & responsive to my concerns/questions with clear communication. I ended up requiring cervical spine surgery & we/she later settled with the insurance company. I believe she was made to practice law & to be a beacon for her clients seeking justice.</h6>
-						<cite>–L.M.</cite>
+						<h6 class="mb-2 text-light-gray">JI highly recommend my Attorney Mr. Kevin Ramas to any of you, who has a personal injury, and is in need of a very professional, dedicated, compassionate and understanding top Attorney. Mr. Ramas has free consultation and will come to you if needed. He is in my opinion the best attorney in all of South Florida, and has now handled and settled two cases for me with great satisfaction. He went above and beyond in both cases to give me the greatest professional experience in my time of need. I could call him anytime with any issue, and he was an awesome listener to all my concerns, and fought for me to get the best care available with no expenses, and ultimately the end result was beyond my expectations.</h6>
+						<cite>–L.P.</cite>
 					</blockquote>
 			</div>
 			<div class="col-md-6 mb-4">
 					<blockquote class="blockquote bg-light" cite="#">
-						<h6 class="mb-2 text-light-gray">This is my first experience with an attorney and it turned out to be the best choice I could have made! Mr. Ramas kept me well informed regarding the status of my case, my rights as a client and resources/assistance available to me. Mr. Ramas reassured me through the process by saying "I have got you covered" and he did just that. My settlement was quicker than expected as well as my final large sum compensation which I was righfully due. I highly recommend Mr. Ramas to anybody looking for a professional, understanding and exceptionally diligent lawyer. - Danielle Hurley, slip and fall victim</h6>
+						<h6 class="mb-2 text-light-gray">This is my first experience with an attorney and it turned out to be the best choice I could have made! Mr. Ramas kept me well informed regarding the status of my case, my rights as a client and resources/assistance available to me. Mr. Ramas reassured me through the process by saying "I have got you covered" and he did just that. My settlement was quicker than expected as well as my final large sum compensation which I was righfully due. I highly recommend Mr. Ramas to anybody looking for a professional, understanding and exceptionally diligent lawyer.</h6>
 						<cite>–D.H.</cite>
 					</blockquote>
 			</div>
@@ -120,19 +120,19 @@ navname: About Us
 						<div class="contact-info all-text-white">
 							<div class="contact-box-icon"><i class="ti-map-alt"></i></div>
 							<h5 class="mb-2">Address</h5>
-							<p>150 SE 2nd Avenue, Suite 300, Miami, FL 33131</p>
+							<p>18201 Peters Road, Ste 1000, Plantation, FL 33324</p>
 						</div>
 						<!-- Email -->
 						<div class="contact-info all-text-white">
 							<div class="contact-box-icon"><i class="ti-email"></i></div>
 							<h5 class="mb-2">E-mail</h5>
-							<p>info@PRLawFL.com</p>
+							<p><a href="mailto:info@ramaslaw.com">info@ramaslaw.com</a></p>
 						</div>
 						<!-- Phone -->
 						<div class="contact-info all-text-white">
 							<div class="contact-box-icon"><i class="ti-mobile"></i></div>
 							<h5 class="mb-2">Phone</h5>
-							<p><a href="tel:1-888-775-29351">888-PR-LAWFL (888-775-2935)</a></p>
+							<p><a href="tel:1-855-954-7529">855-954-RLAW<br>(855-954-7529)</a></p>
 						</div>
 					</div>
 				</div>
