--- a/faq.html
+++ b/faq.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Frequently Asked Questions
-description: Frequentyl Asked Questions when people are thinking of hiring an injury lawyer
+description: Frequently Asked Questions when people are thinking of hiring an injury lawyer
 navname: FAQ
 ---
 
@@ -143,7 +143,7 @@ navname: FAQ
 				<div class="col-md-4 sidebar">
 					<div class="widget bg-light p-3 border-0 border-radius-3">
 						<h4>Have any questions?</h4>
-						<p>If have any questions regarding an injury case, please write to us at <a class="text-primary" href="mailto:info@PRLawFL.com">info@PRLawFL.com</a> for more information. or call us at <a class="display-8 text-dark primary-hover" href="tel:1-888-775-29351">888-775-2935</a></p>
+						<p>If have any questions regarding an injury case, please write to us at <a class="text-primary" href="mailto:info@ramaslaw.com">info@ramaslaw.com</a> for more information. or call us at <a class="display-8 text-dark primary-hover" href="tel:1-855-954-7529">855-954-7529</a></p>
 					</div>
 				</div>
 				<!-- Sidebar end-->
