--- a/practice-areas.html
+++ b/practice-areas.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Practice Areas
-description: Peña Ramas Law specializes in several practice areas.
+description: Ramas Law specializes in several practice areas.
 navigation_weight: 2
 navname: Practice Areas
 ---
@@ -54,7 +54,7 @@ navname: Practice Areas
 					<div class="h-100 icon-grad text-left title pb-0">
 						<h2>Truck Accidents</h2>
 						<div class="feature-box-desc">
-							<p>Commercial vehicle, tractor trailer, or semi-truck accidents can cause serious life changing injuries. Trucking collisions can leave victims feeling defenseless and facing a number of overwhelming burdens including the physical and emotional toll of injuries, lost wages, medical expenses, and property damage.   When a motor vehicle accident occurs, including an accident involving a tractor trailer or a commercial vehicle, it is important to take the steps necessary to ensure evidence is preserved and make certain you receive the benefits you are entitled.  If you or someone you love has been injured as a result of a truck accident, please contact Peña Ramas Law.</p>
+							<p>Commercial vehicle, tractor trailer, or semi-truck accidents can cause serious life changing injuries. Trucking collisions can leave victims feeling defenseless and facing a number of overwhelming burdens including the physical and emotional toll of injuries, lost wages, medical expenses, and property damage.   When a motor vehicle accident occurs, including an accident involving a tractor trailer or a commercial vehicle, it is important to take the steps necessary to ensure evidence is preserved and make certain you receive the benefits you are entitled.  If you or someone you love has been injured as a result of a truck accident, please contact Ramas Law.</p>
 						</div>
 					</div>
 				</div>
@@ -126,7 +126,7 @@ navname: Practice Areas
 						<div class="h-100 icon-grad text-left title pb-0">
 							<h2>Nursing Home Negligence</h2>
 							<div class="feature-box-desc">
-								<p>It is never an easy decision when placing a family member or loved one in the care of a nursing home or assisted living facility.  As a society, our elderly population is one of the most respected classes of individuals, and in many cases, one of the most vulnerable.  When retaining the service of a nursing home or assisted living facility, we hope our loved ones are treated with respect and their needs are fully attended to.  In many cases, the services provided by these entities do not meet our expectations and often times fail to achieve a reasonable standard of care for our loved ones.  Understaffing, negligent hiring, abuse, and neglect are becoming all too common.  Residents subjected to these conditions are at risk for developing bedsores, contracting infection, inadequate hygiene, improper medication administration, and in some cases death.  If you feel a relative or loved one suffered harm as a result of nursing home negligence, contact the attorneys at Peña Ramas Law for a free consultation.</p>
+								<p>It is never an easy decision when placing a family member or loved one in the care of a nursing home or assisted living facility.  As a society, our elderly population is one of the most respected classes of individuals, and in many cases, one of the most vulnerable.  When retaining the service of a nursing home or assisted living facility, we hope our loved ones are treated with respect and their needs are fully attended to.  In many cases, the services provided by these entities do not meet our expectations and often times fail to achieve a reasonable standard of care for our loved ones.  Understaffing, negligent hiring, abuse, and neglect are becoming all too common.  Residents subjected to these conditions are at risk for developing bedsores, contracting infection, inadequate hygiene, improper medication administration, and in some cases death.  If you feel a relative or loved one suffered harm as a result of nursing home negligence, contact the attorneys at Ramas Law for a free consultation.</p>
 							</div>
 						</div>
 					</div>
@@ -155,7 +155,7 @@ navname: Practice Areas
 					<div class="h-100 icon-grad text-left title pb-0">
 						<h2>Property Insurance Claims</h2>
 						<div class="feature-box-desc">
-							<p>At Peña Ramas Law, we understand that property insurance claims can be complicated and time consuming.  When an unexpected disaster occurs, the mental, emotional and financial toll can often times seem overwhelming.  The claims process can often be challenging and involve a number a different moving parts in the early stages of a case which could potentially affect the outcome of the claim. Hiring a competent firm to help navigate through the claims process is very important.  Let us help navigate this process by representing you in your commercial or residential claim in order to maximize your recovery.   </p>
+							<p>At Ramas Law, we understand that property insurance claims can be complicated and time consuming.  When an unexpected disaster occurs, the mental, emotional and financial toll can often times seem overwhelming.  The claims process can often be challenging and involve a number a different moving parts in the early stages of a case which could potentially affect the outcome of the claim. Hiring a competent firm to help navigate through the claims process is very important.  Let us help navigate this process by representing you in your commercial or residential claim in order to maximize your recovery.   </p>
 						</div>
 					</div>
 				</div>
@@ -170,7 +170,7 @@ navname: Practice Areas
 					<div class="h-100 icon-grad text-left title pb-0">
 						<h2>Slip and Falls / Premises Liability</h2>
 						<div class="feature-box-desc">
-							<p>Slip and fall or trip and fall accidents can occur anywhere at any time.  A wet floor, misplaced floor mat, uneven sidewalk, or faulty stairs are just a few of many unsafe conditions that can cause someone to suffer severe and personal injury at a home or business. The initial shock, especially when these accidents occur in a public setting, can often be confusing and embarrassing.  It is extremely important that you, as a victim of your slip and fall or trip and fall, know your rights. Do not wait to report the incident or document the scene of the fall.  If you or a loved one are injured or suffered harm as a result of a slip and fall or trip and fall incident, you may be entitled to compensation.  Peña Ramas Law is here to help navigate our clients through the complicated insurance claim and legal claim process.</p>
+							<p>Slip and fall or trip and fall accidents can occur anywhere at any time.  A wet floor, misplaced floor mat, uneven sidewalk, or faulty stairs are just a few of many unsafe conditions that can cause someone to suffer severe and personal injury at a home or business. The initial shock, especially when these accidents occur in a public setting, can often be confusing and embarrassing.  It is extremely important that you, as a victim of your slip and fall or trip and fall, know your rights. Do not wait to report the incident or document the scene of the fall.  If you or a loved one are injured or suffered harm as a result of a slip and fall or trip and fall incident, you may be entitled to compensation.  Ramas Law is here to help navigate our clients through the complicated insurance claim and legal claim process.</p>
 						</div>
 					</div>
 				</div>
@@ -185,7 +185,7 @@ navname: Practice Areas
 						<div class="feature-box-desc">
 							<p>An unexpected dog bite or attack can often have tremendous long term physical and psychological implications.  Permanent and serious disfigurement, scarring, fear and anxiety of being around animals are just a few of the many effects an unexpected attack can leave on a victim.  Following a dog bite, an individual should seek medical attention as soon as possible.  In addition, it is important to obtain as much information about the dog owner themselves in order to assist in presenting a future claim.</p>
 
-							<p>Our dog bite injury attorneys represent children, adults, mail carriers, utility and service providers, contractors, builders, and pedestrians alike.  Often, an individual who suffers a dog bite is bitten by a friend or family member’s pet.  This, of course, can often cause a great deal of stress when the injured party has a potential claim against a close friend or relative.  The dog bite attorneys at Peña Ramas Law are here to help alleviate your concerns and navigate you through the complicated claims process.</p>
+							<p>Our dog bite injury attorneys represent children, adults, mail carriers, utility and service providers, contractors, builders, and pedestrians alike.  Often, an individual who suffers a dog bite is bitten by a friend or family member’s pet.  This, of course, can often cause a great deal of stress when the injured party has a potential claim against a close friend or relative.  The dog bite attorneys at Ramas Law are here to help alleviate your concerns and navigate you through the complicated claims process.</p>
 						</div>
 					</div>
 				</div>
