--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Peña Ramas Law
-description: Peña Ramas Law - Injury Lawyers in South Florida
+title: Ramas Law
+description: Ramas Law - Injury Lawyers in South Florida
 navigation_weight: 1
 navname: Home
 ---
@@ -20,8 +20,8 @@ navname: Home
                     <div class="row d-flex h-100 align-items-lg-center">
 
                         <div class="title col-sm-12 col-lg-6 col-lg-7 mx-auto text-white pb-0">
-                            <h1 class="text-white">Kevin & Jennifer have recovered millions for their clients in South Florida.</h1>
-                            <p class="lead">If you are a personal injury victim, you need a law firm that is ready to help with insurance settlements and liability claims. Peña Ramas Law will fight to get you the compensation you deserve.</p>
+                            <h1 class="text-white">Kevin has recovered millions for his clients in South Florida.</h1>
+                            <p class="lead">If you are a personal injury victim, you need a law firm that is ready to help with insurance settlements and liability claims. Ramas Law will fight to get you the compensation you deserve.</p>
                             <div>
                                 <a href="{{ site.baseurl }}/free-case-evaluation.html" class="btn btn-primary">Get a FREE Case Evaluation</a>
                             </div>
@@ -30,7 +30,7 @@ navname: Home
                         <div class="partner-photo-wrap col-sm-0 col-md-6 col-lg-5">
                             <div class="hero-form-wrap height-400-responsive">
                                 <div class="partner-photo">
-                                    <img src="assets/images/team/kevin-jen.png" class="fadeInRight wow" alt="Kevin Ramas and Jennifer Peña" style="visibility: visible; animation-duration: 0.5s; animation-delay: 0.2s; animation-name: fadeInRight;" data-wow-duration="0.5s" data-wow-delay="0.2s">
+                                    <img src="assets/images/team/kevin-jen.png" class="fadeInRight wow" alt="Kevin Ramas" style="visibility: visible; animation-duration: 0.5s; animation-delay: 0.2s; animation-name: fadeInRight;" data-wow-duration="0.5s" data-wow-delay="0.2s">
                                 </div>
                             </div>
                         </div>
@@ -77,7 +77,7 @@ navname: Home
             <!-- right -->
             <div class="col-md-6 pl-lg-5">
                 <div class="title text-left pb-4 p-lg-0">
-                    <span class="pre-title">Why choose Peña Ramas Law?</span>
+                    <span class="pre-title">Why choose Ramas Law?</span>
                     <h2>Florida injury lawyers that you can trust</h2>
                     <p class="lead text-dark">Our firm has vast experience in dealing with personal injury cases, claiming several million dollar settlements for our clients. Let us help you with the insurance claim process and get you a fair compensation. We are dedicated to providing competent and responsive legal assistance to each and every client we represent, and we only recover a fee if we win your case.</p>
                 </div>
@@ -100,8 +100,8 @@ navname: Home
         <div class="row">
             <div class="col-sm-12 col-lg-6 align-self-center">
                 <div class="title text-left pb-4 p-lg-0 ">
-                    <h2>Peña Ramas Law specializes in a variety of practice areas.</h2>
-                    <p class="lead text-dark">Peña Ramas Law is here to help navigate our clients through the complicated insurance claim and legal claim process.</p>
+                    <h2>Ramas Law specializes in a variety of practice areas.</h2>
+                    <p class="lead text-dark">Ramas Law is here to help navigate our clients through the complicated insurance claim and legal claim process.</p>
                     <div class="row">
                         <div class="col-6">
                             <ul class="list-group list-group-borderless list-group-icon-primary-bg">
