--- a/about-us.html
+++ b/about-us.html
@@ -60,7 +60,7 @@ navname: About Us
 		<div class="container">
 			<div class="row">
 				<div class="col-md-10 col-lg-6 mx-md-auto align-self-center">
-					<img class="img-fluid" src="assets/images/bg/kevin-jennifer.jpg" alt="Kevin Ramas">
+					<img class="img-fluid" src="assets/images/bg/kevin-ramas-about.jpg" alt="Kevin Ramas, Esquire">
 				</div>
 				<div class="col-sm-12 col-lg-6 align-self-center">
 					<div class="title text-left p-0">
