--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ navname: Home
                         <div class="partner-photo-wrap col-sm-0 col-md-6 col-lg-5">
                             <div class="hero-form-wrap height-400-responsive">
                                 <div class="partner-photo">
-                                    <img src="assets/images/team/kevin-jen.png" class="fadeInRight wow" alt="Kevin Ramas" style="visibility: visible; animation-duration: 0.5s; animation-delay: 0.2s; animation-name: fadeInRight;" data-wow-duration="0.5s" data-wow-delay="0.2s">
+                                    <img src="assets/images/team/kevin-ramas.png" class="fadeInRight wow" alt="Kevin Ramas, Esquire" style="visibility: visible; animation-duration: 0.5s; animation-delay: 0.2s; animation-name: fadeInRight;" data-wow-duration="0.5s" data-wow-delay="0.2s">
                                 </div>
                             </div>
                         </div>
