--- a/free-case-evaluation.html
+++ b/free-case-evaluation.html
@@ -18,7 +18,7 @@ navname: Free Case Evaluation
                 <div class="h-100 title pb-4 p-lg-0">
                     <h1 class="text-center">Get Your FREE Case Evaluation</h1>
                     <p class="lead p-0 text-center text-dark">If you have been injured and think you are entitled to compensation, we can help. Tell us about your case in the form below for a free case evaluation.</p>
-                    <form  action="https://formspree.io/xyywnbep" method="POST" class="contact-form" id="contact-form" name="contactform">
+                    <form  action="https://formspree.io/f/mnqlkdwv" method="POST" class="contact-form" id="contact-form" name="contactform">
                         <!-- Start form message -->
                         <div class="row">
                             <div class="col-12">
