--- a/about-us.html
+++ b/about-us.html
@@ -138,7 +138,7 @@ navname: About Us
 				</div>
 		    <div class="col-md-9">
 		        <div class="contact-map overflow-hidden">
-		            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3592.929145702151!2d-80.19274648497884!3d25.772903783631648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9b69c4a1692ab%3A0xe22fb8088819b8fe!2s150%20SE%202nd%20Ave%20%23300%2C%20Miami%2C%20FL%2033131!5e0!3m2!1sen!2sus!4v1581347485610!5m2!1sen!2sus" style="border:0" allowfullscreen=""></iframe>
+		            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1791.3717259701707!2d-80.26028604193036!3d26.107291995870327!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d907eb8fa20205%3A0xcb9a0c18684a4bb3!2sRegus%20-%20Florida%2C%20Fort%20Lauderdale%20-%20Plantation!5e0!3m2!1sen!2sus!4v1635882684490!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 		        </div>
 		        <div class="d-block d-md-flex bg-grad p-4 p-sm-5 all-text-white border-radius-3">
 				<div class="align-self-center text-center text-md-left">
