--- a/about-us.html
+++ b/about-us.html
@@ -116,11 +116,16 @@ navname: About Us
 			
 			<div class="col-md-3 mb-5">
 					<div class="contact-box h-100 bg-overlay-dark-7 px-3 py-4" style="background:url(assets/images/bg/004.jpg) no-repeat; background-size: cover; background-position: center center; ">
-						<!-- Phone -->
+						<!-- Addresses -->
 						<div class="contact-info all-text-white">
 							<div class="contact-box-icon"><i class="ti-map-alt"></i></div>
-							<h5 class="mb-2">Address</h5>
+							<h5 class="mb-2">Plantation Office</h5>
 							<p>8201 Peters Road, Ste 1000, Plantation, FL 33324</p>
+						</div>
+						<div class="contact-info all-text-white">
+							<div class="contact-box-icon"><i class="ti-map-alt"></i></div>
+							<h5 class="mb-2">Winter Haven Office</h5>
+							<p>316 Avenue A NW 2nd Floor, Winter Haven, FL 33881</p>
 						</div>
 						<!-- Email -->
 						<div class="contact-info all-text-white">
