--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -28,6 +28,8 @@ navname: Privacy Policy
             <!--left-->
             <div class="col-lg-12 col-md-12">
                 <div class="title text-left pb-0">
+                    <h2>Privacy Policy</h2>
+                    <p>Ramas Law collects personal information such as your name, phone number, email address, and details related to your legal inquiry when you submit forms or communicate with us online or via SMS; this information is used solely to respond to inquiries, provide legal services, send appointment reminders or case-related communications, and improve our services, and is shared only with trusted service providers as necessary to operate our website or communications or when required by law; SMS consent is not shared with third parties or affiliates; you may opt out of SMS communications at any time.</p>
                     <h2>SMS Terms of Service</h2>
                     <p>By opting into SMS from a web form or other medium, you are agreeing to receive SMS messages from Ramas Law. P.A.. This includes SMS messages for account notifications. Message frequency varies. Message and data rates may apply. See privacy policy at www.ramaslaw.com. Message HELP for help. Reply STOP to any message to opt out.</p>
                 </div>
