--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -29,9 +29,102 @@ navname: Privacy Policy
             <div class="col-lg-12 col-md-12">
                 <div class="title text-left pb-0">
                     <h2>Privacy Policy</h2>
-                    <p>Ramas Law collects personal information such as your name, phone number, email address, and details related to your legal inquiry when you submit forms or communicate with us online or via SMS; this information is used solely to respond to inquiries, provide legal services, send appointment reminders or case-related communications, and improve our services, and is shared only with trusted service providers as necessary to operate our website or communications or when required by law; SMS consent is not shared with third parties or affiliates; you may opt out of SMS communications at any time.</p>
-                    <h2>SMS Terms of Service</h2>
-                    <p>By opting into SMS from a web form or other medium, you are agreeing to receive SMS messages from Ramas Law. P.A.. This includes SMS messages for account notifications. Message frequency varies. Message and data rates may apply. See privacy policy at www.ramaslaw.com. Message HELP for help. Reply STOP to any message to opt out.</p>
+                    <p>Ramas Law P.A. is committed to protecting your privacy. This Privacy Policy describes how we collect, use, disclose, and protect your information when you visit our website, <a href="https://www.ramaslaw.com/">https://www.ramaslaw.com/</a>, or interact with us in any other manner.</p>
+                    <h3>Information We Collect</h3>
+                    <p>We may collect the following types of information from you:
+                        <ul>
+                            <li>Personal Information: When you contact us through our Website, phone, or email, we may collect personal information that you provide, including your full name, phone number, email address, and mailing address.</li>
+                            <li>Automatically Collected Information: When you visit our Website, we may automatically collect certain information about your device and usage, including IP address, browser type, operating system, referring URLs, and pages viewed.</li>
+                        </ul>
+                    </p>
+                    <h3>How We Use Your Information</h3>
+                    <p>We use the information we collect for the following purposes:
+                        <ul>
+                        <li>To Communicate with You: We use your contact information to respond to your inquiries, provide legal services, send administrative information, and keep you informed about your case or our services.</li>
+                        <li>Marketing and Promotional Communications: With your consent, we may use your information to send you updates, newsletters, or marketing communications via email, phone, or text message. You can opt out of receiving these communications at any time by following the instructions provided in the communication or contacting us directly.</li>
+                        <li>Legal Compliance: We may use your information to comply with applicable laws, regulations, or legal obligations, including responding to subpoenas, court orders, or legal requests.</li>
+                        </ul>
+                    </p>
+                    <h3>Consent to Receive Text Messages</h3>
+<p>You are not required to consent to receiving text messages from ZDT Financials. By providing your phone number and opting in, you consent to receive text messages from ZDT Financials regarding your inquiry, our services, or related legal matters. Message and data rates may apply. You can opt out of receiving text messages at any time by replying “STOP” to any text message your receive from us. Please note that opting out may limit our ability to communicate with you regarding your case or services.</p>
+
+
+<h3>Information Sharing and Disclosure</h3>
+<p>We do not sell or rent your personal information to third parties. We do not sell, rent, release, or transfer your SMS consent or phone number to any third party for any third party marketing purposes. We may share your information in the following circumstances:</p>
+<ul>
+    <li>Service Providers: We may share your information with our service providers who perform services on our behalf, such as marketing, customer services, or technical support. These service providers are contractually obligated to protect your information and use it only for services they provide.</li>
+    <li>Legal Requirements: We may disclose your information if required by law, regulation, or legal process, or if we believe disclosure is necessary to protect our rights, property, or the safety of our users or others.</li>
+</ul>
+
+<h3>Data Security</h3>
+<p>We implement reasonable security measures to protect your personal information from unauthorized access, use, disclosure, alteration, or destruction. However, no method of transmission over the internet or electronic storage is completely secure, and we cannot guarantee absolute security.</p>
+
+
+<h3>Your Rights and Choices</h3>
+<p>Opting Out: You may opt out of receiving marketing communications from us by following the instructions in those communications or contacting us directly. If you opt out, we may still send you non-promotional communications related to your legal services or our ongoing business relationship.</p>
+<p>Access and Update Information: You have the right to access, update, or correct your personal information. To do so, please contact us using the information provided below.</p>
+
+
+<h3>Third-Party Websites</h3>
+<p>Our Website may contain links to third-party websites. We are not responsible for the privacy practices or content of these third-party sites. We encourage you to review the privacy policies of any third-party websites you visit.</p>
+
+
+<h3>SMS Message Communication</h3>
+<p>Text (SMS) Message Communication We may send any Ramas Law P.A. Text (SMS) Message, either directly or via a third-party agent or authorized service provider, through your communication service provider in order to deliver it to you. You agree that your communication services provider is acting as your agent in this capacity. No mobile information will be shared with third parties/affiliates for marketing/promotional purposes. All the above categories exclude text messaging originator opt-in data and consent, this information will not be shared with any third parties. This includes affiliate or business partners the Opt in is not transferable to another party involved in their process. </p>
+ 
+<h3>Children's Privacy</h3>
+<p>Our website is not intended for children under the age of 13. We do not knowingly collect personal information from children under 13. If we become aware that we have inadvertently collected personal information from a child under 13, we will take steps to delete such information.</p>
+
+
+<h3>Changes to This Privacy Policy</h3>
+<p>We may update this Privacy Policy from time to time. Any changes will be posted on this page with an updated “Last Updated” date. We encourage you to review this Privacy Policy periodically for any updates.</p>
+
+
+<h3>Contact Us</h3>
+<p>If you have any questions or concerns about this Privacy Policy or our privacy practices, please contact us at:</p>
+
+<div>
+<p>Ramas Law P.A. <br />
+<a href="https://www.google.com/maps/search/8201+Peters+Rd.,+Ste.+1000,+Plantation,+FL+33324?entry=gmail&source=g" target="_blank">Peters Rd., Ste. 1000, Plantation, FL 33324</a><br />
+Main Office Ph: (855) 954-RLAW (855) 954.7529</p></div>
+
+<h3>SMS Terms and Conditions</h3>
+<p>By opting in to receive SMS messages, you agree to the following:</p>
+
+<p>1. Consent for SMS Communication</p>
+Phone numbers obtained during the SMS consent process will not be shared with third parties for marketing purposes. This is to ensure that your information is used solely for communication purposes related to our services.</p>
+<p>2. Types of SMS Communications</p>
+<p>By opting in, you may receive SMS messages related to:</p>
+<ul>
+<li>Appointment reminders</li>
+<li>Follow-up messages</li>
+<li>Billing inquiries</li>
+<li>Promotions or offers (if applicable)</li>
+</ul>
+<p>3. Message Frequency</p>
+<p>Message frequency may vary depending on the type of communication. For example, you may receive up to 15 messages per week related to appointments, billing, etc.</p>
+<p>4. Potential Fees for SMS Messaging</p>
+<p>Standard message and data rates may apply, depending on your carrier's pricing plan. These fees may differ for domestic or international messages.</p>
+<p>5. Opt-In Methods</p>
+<p>You may opt in to receive SMS messages from Ramas Law P.A. in the following ways:</p>
+<ul>
+<li>Verbally, during a conversation</li>
+<li>By submitting an online form</li>
+<li>By filling out a paper form</li>
+</ul>
+<p>6. Opt-Out Instructions</p>
+<p>You can opt out at any time by replying “STOP” to any SMS message. Alternatively, contact us directly at Info@RamasLaw.com.</p>
+<p>7. Help</p>
+<p>If you are experiencing any issues, reply with the keyword “HELP” or contact us directly at Info@RamasLaw.com.</p>
+8. Additional Options</p>
+<p>If you do not wish to receive SMS messages, you can choose not to check the SMS consent box on our forms.</p>
+<p>9. Standard Messaging Disclosures</p>
+<p>Message and data rates may apply.</p>
+<p>You can opt out at any time by texting “STOP.”</p>
+<p>For assistance, text “HELP” or visit our Privacy Policy https://www.ramaslaw.com/privacy-policy page.</p>
+<p>Message frequency may vary depending on service.</p>
+
+
                 </div>
             </div>
         </div>
